fix(return-links): line height cutoff
line-height: 1 was cutting off letters like g and j. This increases the line height,
which stops the cut off.

--- a/src/components/layout/header/return-links.module.scss
+++ b/src/components/layout/header/return-links.module.scss
@@ -11,7 +11,7 @@
   }
 
   a, span {
-    line-height: 1;
+    line-height: 1.5;
   }
 
   span {
@@ -35,6 +35,10 @@
 
   a, img, span {
     @include margin(4, (left, right));
+  }
+
+  img {
+    @include margin(4, (bottom));
   }
 
 }
